--- a/styles.css
+++ b/styles.css
@@ -73,11 +73,65 @@ a {
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     background-color: var(--right-section-background-darker);
 }
 
+#call-to-action {
+    margin-top: 150px;
+    margin-left: 40px;
+    font-size: 20px;
+    font-weight: 500;
+    max-width: 62ch;
+}
+
+form h3 {
+    font-size: 22px;
+    font-weight: 500;
+}
+
 form {
+    padding: 35px 40px;
+    margin-top: 60px;
     background-color: white;
     box-shadow: 0 5px 5px 0 rgba(0,0,0,20%);
+}
+
+.inputs {
+    display:flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.name, .contact, .password {
+    display: flex;
+    gap: 50px;
+}
+
+.name label, .contact label, .password label {
+    display: flex;
+    flex-direction: column;
+}
+
+#submit {
+    margin-left: 40px;
+    margin-top: 35px;
+    padding: 5px 40px;
+    align-self: flex-start;
+    font-size: 20px;
+    color: white;
+    background-color: #596D48;
+    border: none;
+    border-radius: 5px;
+}
+
+#log-in {
+    margin-left: 40px;
+    margin-top: 35px;
+    font-weight: 500;
+}
+
+#log-in a {
+    text-decoration: none;
+    color: #596D48;
 }
