--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@ form {
 }
 
 .inputs {
+    margin-top: 20px;
     display:flex;
     flex-direction: column;
     gap: 30px;
@@ -106,6 +107,10 @@ form {
 .name, .contact, .password {
     display: flex;
     gap: 50px;
+}
+
+form div div {
+    font-size: 13px;
 }
 
 .name label, .contact label, .password label {
